begin of removing synchronous task